# minecraft-mcp

./: .gitignore  .roomodes  IMPLEMENTATION_SUMMARY.md  README.md  pyproject.toml  run_tests.sh
.roo/: mcp.json
src/: client.py  client_example.py  client_example_simple.py  server_wrapper.py  test_context_handling.py  test_place_block.py  test_tutorial_tools.py  test_tutorial_tools_direct.py
src/gdmc_mcp/: __init__.py  gdpc_utils.py  models.py  py.typed  server.py  tutorial_tools.py
tests/: README.md  conftest.py  run_tests.py  test_block_data_conversion.py  test_context_handling.py  test_models.py  test_place_block_tool.py  test_place_cuboid_tool.py  test_place_entities_tool.py  test_place_structure_tool.py  test_resources.py  test_run_command_tool.py  test_server_lifespan.py  test_tutorial_tools_client.py  test_tutorial_tools_direct.py
